--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,14 @@
 test:
   image: python:2.7
+  before_script:
+    - pip install -r requirements.txt
   script:
     - PYTHONPATH="${PYTHONPATH}:./src/" python src/test.py && PYTHONPATH="${PYTHONPATH}:./src/" coverage run --source=./src/ src/test.py && coverage report
 
 test_py3:
   image: python:3.5
+  before_script:
+    - pip install -r requirements.txt
   script:
     - PYTHONPATH="${PYTHONPATH}:./src/" python src/test.py && PYTHONPATH="${PYTHONPATH}:./src/" coverage run --source=./src/ src/test.py && coverage report
   allow_failure: true
