--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ test:
   image: python:2.7
   before_script:
     - pip install -r requirements.txt
+    - pip install -r requirements-dev.txt
   script:
     - PYTHONPATH="${PYTHONPATH}:./src/" python src/test.py && PYTHONPATH="${PYTHONPATH}:./src/" coverage run --source=./src/ src/test.py && coverage report
 
@@ -9,6 +10,7 @@ test_py3:
   image: python:3.5
   before_script:
     - pip install -r requirements.txt
+    - pip install -r requirements-dev.txt
   script:
     - PYTHONPATH="${PYTHONPATH}:./src/" python src/test.py && PYTHONPATH="${PYTHONPATH}:./src/" coverage run --source=./src/ src/test.py && coverage report
   allow_failure: true
