--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ test:
     - pip install -r requirements.txt
     - pip install -r requirements-dev.txt
   script:
-    - PYTHONPATH="${PYTHONPATH}:./src/" python src/test.py && PYTHONPATH="${PYTHONPATH}:./src/" coverage run --source=./src/ src/test.py && coverage report -m
+    - PYTHONPATH="${PYTHONPATH}:./backend/" python backend/test.py && PYTHONPATH="${PYTHONPATH}:./backend/" coverage run --source=./backend/ backend/test.py && coverage report -m
 
 test_py3:
   image: python:3.5
@@ -14,7 +14,7 @@ test_py3:
     - pip install -r requirements.txt
     - pip install -r requirements-dev.txt
   script:
-    - PYTHONPATH="${PYTHONPATH}:./src/" python src/test.py && PYTHONPATH="${PYTHONPATH}:./src/" coverage run --source=./src/ src/test.py && coverage report -m
+    - PYTHONPATH="${PYTHONPATH}:./backend/" python backend/test.py && PYTHONPATH="${PYTHONPATH}:./backend/" coverage run --source=./backend/ backend/test.py && coverage report -m
   allow_failure: true
 
 test_package_py2:
